gccida/g2/optimize_minmax_comparison
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_minmax_comparison/src/fold-const.c:4840:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *type; // r14 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_minmax_comparison/src/fold-const.c:4844:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_minmax_comparison/src/fold-const.c:4845:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v14; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_minmax_comparison/src/fold-const.c:4846:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_minmax_comparison/src/fold-const.c:4847:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v16; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_minmax_comparison/src/fold-const.c:4848:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v17; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_minmax_comparison/src/fold-const.c:4850:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v19; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_minmax_comparison/src/fold-const.c:4853:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v22; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_minmax_comparison/src/fold-const.c:4854:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v23; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_minmax_comparison/src/fold-const.c:4870:22: error: expected expression
v13 = *( tree_node **)( low + 40); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_minmax_comparison/src/fold-const.c:4870:10: error: use of undeclared identifier 'tree_node'
v13 = *( tree_node **)( low + 40); 
         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_minmax_comparison/src/fold-const.c:4908:20: error: expected expression
v22 = ( tree_node *)*( &global_trees + 12); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_minmax_comparison/src/fold-const.c:4908:9: error: use of undeclared identifier 'tree_node'
v22 = ( tree_node *)*( &global_trees + 12); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_minmax_comparison/src/fold-const.c:4941:20: error: expected expression
v22 = ( tree_node *)*( &global_trees + 11); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_minmax_comparison/src/fold-const.c:4941:9: error: use of undeclared identifier 'tree_node'
v22 = ( tree_node *)*( &global_trees + 11); 
        ^
15 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_minmax_comparison/src/obj/fold-const.o] Error 1
